crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_budget_tracker_after_tokens.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: "format!(\"generated={} remaining={}\", tracker.tokens_generated(),\ntracker.tokens_remaining())"
---
generated=25 remaining=75
