crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_budget_tracker_exhausted.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: "format!(\"exhausted={} remaining={}\", !tracker.can_continue(),\ntracker.tokens_remaining())"
---
exhausted=true remaining=0
