crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_budget_tracker_fresh.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: "format!(\"remaining={}\", tracker.tokens_remaining())"
---
remaining=32
