crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_estimate_kv_cache_llama_7b.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: est
---
KvCacheEstimation {
    per_layer_bytes: 67108864,
    total_bytes: 2147483648,
    num_layers: 32,
    num_kv_heads: 32,
    head_dim: 128,
    max_seq_len: 4096,
    dtype_bytes: 2,
}
