crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_generation_budget_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: budget
---
GenerationBudget {
    max_tokens: 256,
    max_time: None,
    max_memory_bytes: None,
}
