crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_generation_budget_with_time_limit.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: budget
---
GenerationBudget {
    max_tokens: 64,
    max_time: Some(
        30s,
    ),
    max_memory_bytes: None,
}
